[package]
name = "dax-rust"
version = "0.1.0"
authors = ["Garry Mounac <g.mounac@outlook.com>"]
edition = "2021"
description = "A Rust library for working with DAX (Data Analysis Expressions)"
license = "MIT"
repository = "https://github.com/attica-oss/dax-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dax-macro-impl = { path = "./dax-macro-impl" }
dax-macro = { path = "./dax-macro" }
chrono =  { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
env_logger = "0.11.5"
log = "0.4.22"
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"


[lib]
name = "dax_rust"
path = "src/lib.rs"

[[bin]]
name = "dax-rust-cli"
path = "src/main.rs"
